# CMakeBestPractices

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakePresetsBase.json  README.md  build-and-run.py  build-and-run.sh  compile-and-run.sh  superbuild.py
AdeClangFormat/: AdeClangFormatConfig.cmake.in  CMakeLists.txt  README.md
AdeClangFormat/test/: CMakeLists.txt
SilClangFormat/: CMakeLists.txt  CMakePresets.json  SilClangFormatConfig.cmake.in
exe-and-lib2/: CMakeLists.txt  CMakePresets.json  cmake-commands.sh
exe-and-lib2/exe/: CMakeLists.txt  main.cpp
exe-and-lib2/exe/include/exe/: dummy_fibo_sum.hpp
exe-and-lib2/exe/src/: main.cpp
exe-and-lib2/exe/test/: CMakeLists.txt
exe-and-lib2/exe/test/src/: main.cpp
exe-and-lib2/lib2/: CMakeLists.txt
exe-and-lib2/lib2/cmake/: exelib2Config.cmake.in
exe-and-lib2/lib2/include/lib2/: defines.h  hdr.h
exe-and-lib2/lib2/src/: hdr.h  lib2.cpp
exe-and-lib2/lib2/test/: CMakeLists.txt
exe-and-lib2/lib2/test/src/: main.cpp
lib1/: .clangd  CMakeLists.txt  CMakePresets.json  cmake-commands.sh
lib1/include/lib1/: defines.h  hdr.h
lib1/src/: lib1.cpp
lib1/test/: CMakeLists.txt
lib1/test/src/: main.cpp
prj1/: .clang-format  CMakeLists.txt  CMakePresets.json
prj1/cmake/: prj1Config.cmake.in  tree.cmake
prj1/extra/cpp/: dummy.cpp
prj1/include/lib1/: defines.h  hdr.h
prj1/lib1/: CMakeLists.txt  README.md
prj1/lib1/extra/cpp/: dummy.cpp
prj1/lib1/src/: bn_error.c  bn_fast_s_mp_mul_digs.c  bn_fast_s_mp_mul_high_digs.c  bn_fast_s_mp_sqr.c  bn_mp_add_d.c  bn_mp_clamp.c  bn_mp_clear_multi.c  bn_mp_cmp.c  bn_mp_cmp_mag.c  bn_mp_cnt_lsb.c  bn_mp_div_2.c  bn_mp_div_2d.c  bn_mp_div_3.c  bn_mp_dr_is_modulus.c  bn_mp_dr_reduce.c  bn_mp_dr_setup.c  bn_mp_exch.c  bn_mp_exptmod_fast.c  bn_mp_exteuclid.c  bn_mp_fread.c  bn_mp_fwrite.c  bn_mp_get_int.c  bn_mp_grow.c  bn_mp_init.c  bn_mp_init_multi.c  bn_mp_init_set.c  bn_mp_init_set_int.c  bn_mp_invmod.c  bn_mp_invmod_slow.c  bn_mp_karatsuba_sqr.c  bn_mp_lshd.c  bn_mp_mod.c  bn_mp_montgomery_reduce.c  bn_mp_montgomery_setup.c  bn_mp_mul.c  bn_mp_mul_2d.c  bn_mp_mul_d.c  bn_mp_or.c  bn_mp_prime_is_divisible.c  bn_mp_prime_is_prime.c  (+29 more)
prj1/lib1/src/lib1/private/: private-header.hpp
prj1/lib1/test/src/: main.cpp
prj1/src/: lib1.cpp
prj1/test/: CMakeLists.txt
prj1/test/src/: main.cpp
prj2/exe/: .gitignore  CMakeLists.txt  main.cpp
prj2/exe/include/exe/: dummy_fibo_sum.hpp
prj2/exe/lua/: CMakeLists.txt  README.md
prj2/exe/lua/src/: lua.c
prj2/exe/res/: .gitignore
prj2/exe/res/Announcers/: instructions.txt
prj2/exe/res/BGAnimations/: instructions.txt
prj2/exe/res/CMake/: CMakeMacros.cmake  CPackSetup.cmake  DefineOptions.cmake  license_install.txt
prj2/exe/res/CMake/Modules/: FindGTK3.cmake  FindIconv.cmake  FindJACK.cmake  FindPulseAudio.cmake  FindVa.cmake  FindXrandr.cmake  FindXtst.cmake  NSIS.template.in
prj2/exe/res/Characters/: Instructions.txt
prj2/exe/res/Characters/default/: character.ini
prj2/exe/res/Courses/: instructions.txt
prj2/exe/res/Courses/Default/: Jupiter.crs
prj2/exe/res/Data/: AI.ini  NamesBlacklist.txt  RandomAttacks.txt
prj2/exe/res/Data/AutoMappings/: GamePad Pro USB.ini
prj2/exe/res/Docs/: Changelog_SSCformat.txt  Changelog_language.txt  Changelog_sm-ssc.txt  Changelog_sm5.txt  CommandLineArgs.txt  CourseFormat.txt  CustomMissionReference.txt  KnownIssues.txt  Licenses.txt  Mapping_keys_for_edit_mode.txt  credits.txt  credits_old_Stepmania_Team.txt  old_changelog.txt  opensource_simulators.txt  versioning.txt
prj2/exe/res/Docs/Devdocs/: BuildingFfmpegOnMac.txt  CodingStyle.txt  CompileFlags.txt  GoldenRules.txt  SMLanProtocol.txt  SMO_protocol-aj.txt  SMXML.txt  Sound Drivers.txt  SplitTiming.txt  TextEntry.txt  WarpNotes.txt  ezsockets.txt  interesting_sm4_commit_logs.txt  possible memory leaks.txt  rivaldata.txt  versioning.txt
prj2/exe/res/Docs/Luadoc/: Lua.xml  Lua.xsd  LuaDocumentation.xml
prj2/exe/res/Docs/SimfileFormats/: dance-spec.txt  misc.txt  new format draft.txt  ssc_msd5.txt
prj2/exe/res/Docs/Themerdocs/: Noteskin elements Reference.txt  ScreenMessages.txt  ScreenTextEntry.txt  ThemePrefs.txt  ThemePrefsRows.txt  XmlToLua.txt  actordef.txt  announcer_files.txt  calories.txt  conditional_music.txt  effect_colors.txt  fontini.txt  gamecommands.txt  haste.txt  included_scripts.txt  modslevel.txt  moremsg.txt  recommended_practices.txt  (+1 more)
prj2/exe/res/Manual/: index.html
prj2/exe/res/NoteSkins/: instructions.txt
prj2/exe/res/Songs/: .gitattributes  instructions.txt
prj2/exe/res/Xcode/: Hardware.in.plist
prj2/exe/src/: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  StepmaniaCore.cmake  dummy_fibo_sum.cpp
prj2/exe/src/CMake/: CMakeMacros.cmake  DefineOptions.cmake
prj2/exe/src/Xcode/: Hardware.plist  Info.StepMania.plist  plistHelper.hpp  smicon.icns
prj2/exe/src/exe/: .gitattributes  ActorMultiTexture.h  AnnouncerManager.cpp  AttackDisplay.cpp  BGAnimation.cpp  CMakeData-actor.cmake  CMakeData-arch.cmake  CMakeData-data.cmake  CMakeData-gtk.cmake  CMakeData-rage.cmake  CMakeData-screen.cmake  CMakeData-singletons.cmake  CMakeLists.txt  CMakeProject-mapconv.cmake  CMakeProject-texture.cmake  Course.cpp  CourseUtil.cpp  CreateZip.cpp  CreateZip.h  DancingCharacters.h  DifficultyList.h  EnumHelper.h  GameSoundManager.cpp  InputMapper.cpp  LuaManager.h  LyricDisplay.cpp  ModIcon.cpp  MusicWheel.cpp  MusicWheel.h  NoteDataUtil.cpp  OptionRow.cpp  PlayerStageStats.cpp  Preference.h  ProductInfo.h  ProductInfo.inc  Profile.cpp  ProfileManager.cpp  RageDisplay_GLES2.cpp  RageDisplay_OGL.cpp  RageException.h  (+52 more)
prj2/exe/test/: CMakeLists.txt
prj2/exe/test/src/: main.cpp
prj2/lib2/: CMakeLists.txt
prj2/lib2/cmake/: prj2Config.cmake.in
prj2/lib2/extra/cpp/: dummy.cpp
prj2/lib2/include/lib2/: hdr.h
prj2/lib2/src/: lib2.cpp  tomcrypt_cipher.h  tomcrypt_custom.h  tomcrypt_hash.h  tomcrypt_mac.h  tomcrypt_math.h  tomcrypt_misc.h  tomcrypt_pk.h  tomcrypt_prng.h
prj2/lib2/src/lib2/: defines.h
prj2/lib2/test/: CMakeLists.txt
prj2/lib2/test/src/: main.cpp
(+310 files in other folders)
